--- a/app/src/main/res/layout/activity_main_with_nav.xml
+++ b/app/src/main/res/layout/activity_main_with_nav.xml
@@ -8,8 +8,10 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main"
+    <include layout="@layout/app_bar_main" />
+
+    <FrameLayout
+        android:id="@+id/main_content_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
