--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,33 +5,29 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_terms"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Terms" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_courses"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Courses" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Data Management">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_clear_db"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Clear Database" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_seed_db"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Seed Database" />
         </menu>
     </item>
 
