--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,9 @@
     <dimen name="margin_large">16dp</dimen>
     <dimen name="card_text_spacing">8dp</dimen>
     <dimen name="indent_spacing">16dp</dimen>
+    <dimen name="card_view_width">395dp</dimen>
+    <dimen name="term_card_height">150dp</dimen>
+    <dimen name="course_card_height">150dp</dimen>
+    <dimen name="card_title_text_size">25sp</dimen>
+    <dimen name="card_standard_text_size">20sp</dimen>
 </resources>
