Move ui-related classes into a new ui package.  Move DateUtil into utils package.

--- a/app/src/main/res/layout/fragment_term_list.xml
+++ b/app/src/main/res/layout/fragment_term_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="?attr/actionBarSize"
-    tools:context=".TermListFragment">
+    tools:context=".ui.TermListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/term_recyclerview"
