--- a/app/src/main/res/layout/fragment_course_list.xml
+++ b/app/src/main/res/layout/fragment_course_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="?attr/actionBarSize"
-    tools:context=".CourseListFragment">
+    tools:context=".ui.CourseListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/course_recyclerview"
