--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,10 +13,10 @@
         android:id="@+id/home_cardView_terms"
         android:layout_width="395dp"
         android:layout_height="275dp"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_small"
-        android:layout_marginBottom="@dimen/margin_small"
+        android:layout_marginStart="@dimen/activity_margin_small"
+        android:layout_marginTop="@dimen/activity_margin_small"
+        android:layout_marginEnd="@dimen/activity_margin_small"
+        android:layout_marginBottom="@dimen/activity_margin_small"
         android:onClick="handleTermsCardClick"
         app:layout_constraintBottom_toTopOf="@id/home_cardView_courses"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,10 +37,10 @@
         android:id="@+id/home_cardView_courses"
         android:layout_width="395dp"
         android:layout_height="275dp"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_small"
-        android:layout_marginBottom="@dimen/margin_small"
+        android:layout_marginStart="@dimen/activity_margin_small"
+        android:layout_marginTop="@dimen/activity_margin_small"
+        android:layout_marginEnd="@dimen/activity_margin_small"
+        android:layout_marginBottom="@dimen/activity_margin_small"
         android:onClick="handleCoursesCardClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
