--- a/app/src/main/res/layout/recyclerview_item_course.xml
+++ b/app/src/main/res/layout/recyclerview_item_course.xml
@@ -9,38 +9,38 @@
         android:id="@+id/courses_cardView"
         android:layout_width="@dimen/card_view_width"
         android:layout_height="@dimen/course_card_height"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_small"
-        android:layout_marginBottom="@dimen/margin_small">
+        android:layout_marginStart="@dimen/activity_margin_small"
+        android:layout_marginTop="@dimen/activity_margin_small"
+        android:layout_marginEnd="@dimen/activity_margin_small"
+        android:layout_marginBottom="@dimen/activity_margin_small">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
-            android:paddingStart="@dimen/margin_large">
+            android:paddingStart="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/course_list_text_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/card_title_text_size"
+                android:textSize="@dimen/text_size_title"
                 tools:text="Course Name" />
 
             <TextView
                 android:id="@+id/course_list_text_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/indent_spacing"
-                android:layout_marginTop="@dimen/card_text_spacing"
-                android:textSize="@dimen/card_standard_text_size"
+                android:layout_marginStart="@dimen/indent_size"
+                android:layout_marginTop="@dimen/text_line_spacing"
+                android:textSize="@dimen/text_size_standard"
                 tools:text="Course Status" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/indent_spacing"
+                android:layout_marginStart="@dimen/indent_size"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -48,8 +48,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/card_text_spacing"
-                    android:layout_marginEnd="@dimen/card_text_spacing"
+                    android:layout_marginTop="@dimen/text_line_spacing"
+                    android:layout_marginEnd="@dimen/text_line_spacing"
                     android:src="@drawable/ic_menu_calendar" />
 
                 <TextView
@@ -57,8 +57,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/card_text_spacing"
-                    android:textSize="@dimen/card_standard_text_size"
+                    android:layout_marginTop="@dimen/text_line_spacing"
+                    android:textSize="@dimen/text_size_standard"
                     tools:text="start date - end date" />
             </LinearLayout>
         </LinearLayout>
