--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,16 +2,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_margin_small">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="margin_small">8dp</dimen>
-    <dimen name="margin_large">16dp</dimen>
-    <dimen name="card_text_spacing">8dp</dimen>
-    <dimen name="indent_spacing">16dp</dimen>
+    <dimen name="text_size_title">25sp</dimen>
+    <dimen name="text_size_standard">20sp</dimen>
+    <dimen name="text_line_spacing">8dp</dimen>
+    <dimen name="indent_size">16dp</dimen>
     <dimen name="card_view_width">395dp</dimen>
     <dimen name="term_card_height">150dp</dimen>
     <dimen name="course_card_height">150dp</dimen>
-    <dimen name="card_title_text_size">25sp</dimen>
-    <dimen name="card_standard_text_size">20sp</dimen>
 </resources>
