--- a/app/src/main/res/layout/activity_main_with_nav.xml
+++ b/app/src/main/res/layout/activity_main_with_nav.xml
@@ -13,7 +13,8 @@
     <FrameLayout
         android:id="@+id/main_content_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
