--- a/app/src/main/res/layout/content_term.xml
+++ b/app/src/main/res/layout/content_term.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/term_details_section_height"
     android:orientation="vertical"
     android:padding="@dimen/activity_margin_small"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
