Implement delete option from term appbar.
- remove extra delete methods that are not needed from repository classes.
- add alert dialog to ask for confirmation before deleting a term.
- add snackbar message displaying result or error of delete operation.
- implement a customer result object and custom listener interface in
order for the UI to listen from an async task in the data repositories.
- Add wrapper exception for database constraint violations.
- Add code in MainActivity to parse IntentExtra for fragment destination
and request to display snackbar message.

--- a/app/src/main/res/menu/menu_term.xml
+++ b/app/src/main/res/menu/menu_term.xml
@@ -5,11 +5,13 @@
     <item
         android:id="@+id/action_edit_term"
         android:orderInCategory="100"
-        android:title="Edit"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/edit"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_delete_term"
         android:orderInCategory="101"
-        android:title="Delete"
+        android:icon="@drawable/ic_delete"
+        android:title="@string/delete"
         app:showAsAction="always" />
 </menu>
