--- a/app/src/main/res/layout/content_term.xml
+++ b/app/src/main/res/layout/content_term.xml
@@ -20,12 +20,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/text_line_spacing"
+        android:layout_marginStart="@dimen/indent_size"
         android:textSize="@dimen/text_size_standard"
         tools:text="Term Status" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/indent_size"
         android:layout_marginTop="@dimen/text_line_spacing"
         android:orientation="horizontal">
 
@@ -44,6 +46,21 @@
             android:textSize="@dimen/text_size_standard"
             tools:text="End Date" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/activity_margin_small"
+        android:background="?android:attr/listDivider" />
+
+    <TextView
+        android:id="@+id/term_courses"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_line_spacing"
+        android:text="@string/term_courses"
+        android:textSize="@dimen/text_size_subtitle" />
 
 
 </LinearLayout>
