--- a/app/src/main/res/layout/recyclerview_item_term.xml
+++ b/app/src/main/res/layout/recyclerview_item_term.xml
@@ -16,8 +16,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
+            android:paddingTop="@dimen/activity_margin_small"
             android:orientation="vertical"
             android:paddingStart="@dimen/activity_horizontal_margin">
 
@@ -41,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/indent_size"
+                android:layout_marginTop="@dimen/activity_margin_small"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -48,7 +50,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/text_line_spacing"
                     android:layout_marginEnd="@dimen/text_line_spacing"
                     android:src="@drawable/ic_menu_calendar" />
 
@@ -57,7 +58,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/text_line_spacing"
                     android:textSize="@dimen/text_size_standard"
                     tools:text="start date - end date" />
             </LinearLayout>
