--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,12 +6,13 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
-    <dimen name="text_size_title">25sp</dimen>
-    <dimen name="text_size_standard">20sp</dimen>
+    <dimen name="text_size_title">22sp</dimen>
+    <dimen name="text_size_subtitle">18sp</dimen>
+    <dimen name="text_size_standard">14sp</dimen>
     <dimen name="text_line_spacing">8dp</dimen>
     <dimen name="indent_size">16dp</dimen>
     <dimen name="card_view_width">395dp</dimen>
-    <dimen name="term_card_height">150dp</dimen>
-    <dimen name="course_card_height">150dp</dimen>
-    <dimen name="term_details_section_height">125dp</dimen>
+    <dimen name="term_card_height">110dp</dimen>
+    <dimen name="course_card_height">110dp</dimen>
+    <dimen name="term_details_section_height">140dp</dimen>
 </resources>
