--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <!--<color name="colorAccent">#D81B60</color>-->
+    <color name="colorAccent">#85000d</color>
+
+    <!--<color name="colorPrimary">#b3e5fc</color>-->
+    <!--<color name="colorPrimaryDark">#82b3c9</color>-->
+    <!--<color name="colorAccent">#ee6002</color>-->
 </resources>
