feat: Add assessment list fragment to course view
Resolves: #1

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="course_card_height">110dp</dimen>
     <dimen name="term_details_section_height">140dp</dimen>
     <dimen name="course_details_section_height">260dp</dimen>
+    <dimen name="assessment_card_height">110dp</dimen>
 </resources>
