--- a/app/src/main/res/layout/content_course_edit.xml
+++ b/app/src/main/res/layout/content_course_edit.xml
@@ -121,6 +121,28 @@
         app:layout_constraintTop_toTopOf="@id/course_status_label" />
 
     <TextView
+        android:id="@+id/course_term_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_small"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/activity_margin_large"
+        android:text="@string/term"
+        android:textSize="@dimen/text_size_editor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/course_status_label" />
+
+    <Spinner
+        android:id="@+id/course_input_term"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_large"
+        android:entries="@array/sample_list_items"
+        app:layout_constraintBottom_toBottomOf="@id/course_term_label"
+        app:layout_constraintStart_toEndOf="@id/course_term_label"
+        app:layout_constraintTop_toTopOf="@id/course_term_label" />
+
+    <TextView
         android:id="@+id/mentor_text_description_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -129,7 +151,7 @@
         android:layout_marginEnd="@dimen/activity_margin_small"
         android:text="@string/course_mentor"
         android:textSize="@dimen/text_size_editor"
-        app:layout_constraintTop_toBottomOf="@id/course_status_label" />
+        app:layout_constraintTop_toBottomOf="@id/course_term_label" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/mentor_input_first_name_layout"
