--- a/app/src/main/res/layout/content_assessment_edit.xml
+++ b/app/src/main/res/layout/content_assessment_edit.xml
@@ -56,6 +56,7 @@
         android:id="@+id/assessment_input_goal_layout"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_margin_small"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:errorEnabled="false"
@@ -74,6 +75,17 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Switch
+        android:id="@+id/assessment_switch_alert_goal"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_small"
+        android:layout_marginTop="@dimen/activity_margin_small"
+        android:switchPadding="@dimen/activity_margin_small"
+        android:text="@string/enable_start_alert"
+        android:textSize="@dimen/text_size_editor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessment_input_goal_layout" />
 
     <Button
         android:id="@+id/assessment_button_save"
@@ -86,7 +98,7 @@
         android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/assessment_input_goal_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/assessment_switch_alert_goal" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
