--- a/app/src/main/res/menu/menu_course.xml
+++ b/app/src/main/res/menu/menu_course.xml
@@ -3,15 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.clstephenson.mywgutracker.ui.CourseActivity">
     <item
+        android:id="@+id/action_view_notes"
+        android:icon="@drawable/ic_note"
+        android:orderInCategory="100"
+        android:title="@string/notes"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_edit_course"
         android:icon="@drawable/ic_edit"
-        android:orderInCategory="100"
+        android:orderInCategory="110"
         android:title="@string/edit"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_delete_course"
         android:icon="@drawable/ic_delete"
-        android:orderInCategory="101"
+        android:orderInCategory="120"
         android:title="@string/delete"
         app:showAsAction="always" />
 </menu>
