--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="assessment_card_height">110dp</dimen>
     <dimen name="text_size_editor">18sp</dimen>
     <dimen name="activity_margin_large">16dp</dimen>
+    <dimen name="note_card_height">120dp</dimen>
 </resources>
