feat: Add ability to delete and edit notes
resolves: #8, #9

--- a/app/src/main/res/layout/dialog_note.xml
+++ b/app/src/main/res/layout/dialog_note.xml
@@ -13,6 +13,7 @@
         android:inputType="textMultiLine"
         android:lines="15"
         android:scrollbars="vertical"
+        android:padding="@dimen/activity_margin_small"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula eros eget consequat venenatis. Nam aliquet metus id est feugiat elementum. Vestibulum non est vestibulum." />
 
 </LinearLayout>
