--- a/app/src/main/res/layout/recyclerview_item_note.xml
+++ b/app/src/main/res/layout/recyclerview_item_note.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/notes_cardView"
         android:layout_width="@dimen/card_view_width"
-        android:layout_height="@dimen/note_card_height"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_margin_small"
         android:layout_marginTop="@dimen/activity_margin_small"
         android:layout_marginEnd="@dimen/activity_margin_small"
@@ -19,8 +19,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:orientation="vertical"
-            android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_margin_small">
+            android:padding="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/note_list_note"
