--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="text_size_editor">18sp</dimen>
     <dimen name="activity_margin_large">16dp</dimen>
     <dimen name="note_card_height">120dp</dimen>
+    <dimen name="mentor_icon_size">30dp</dimen>
 </resources>
