feat: Add ability to create a new course from course list or term view
I had to create a separate asynctask within the termRepository class
just for this feature.  For some reason, I was not able to get the
list of terms in the course edit activity with the LiveData.

I also removed the delete options from the edit activities for terms,
courses, and assessments.

Resolves: #21

--- a/app/src/main/res/layout/content_course_edit.xml
+++ b/app/src/main/res/layout/content_course_edit.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/course_title"
-            android:inputType="textCapCharacters" />
+            android:inputType="textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -169,7 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/first_name"
-            android:inputType="textCapCharacters" />
+            android:inputType="textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -190,7 +190,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/last_name"
-            android:inputType="textCapCharacters" />
+            android:inputType="textCapWords" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -235,20 +235,5 @@
             android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
-
-    <Button
-        android:id="@+id/course_button_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:onClick="handleSaveCourse"
-        android:text="@string/save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mentor_input_email_layout" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
