--- a/app/src/main/res/layout/activity_main_with_nav.xml
+++ b/app/src/main/res/layout/activity_main_with_nav.xml
@@ -21,7 +21,7 @@
             android:paddingTop="?attr/actionBarSize" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_add_term"
+            android:id="@+id/fab_add_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
