--- a/app/src/main/res/menu/menu_course_edit.xml
+++ b/app/src/main/res/menu/menu_course_edit.xml
@@ -3,11 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.clstephenson.mywgutracker.ui.CourseEditActivity">
 
+    <!--<item-->
+    <!--android:id="@+id/action_delete_course_edit"-->
+    <!--android:icon="@drawable/ic_delete"-->
+    <!--android:orderInCategory="101"-->
+    <!--android:title="@string/delete"-->
+    <!--app:showAsAction="always" />-->
+
     <item
-        android:id="@+id/action_delete_course_edit"
-        android:icon="@drawable/ic_delete"
+        android:id="@+id/action_save_course_edit"
         android:orderInCategory="101"
-        android:title="@string/delete"
+        android:title="@string/save"
         app:showAsAction="always" />
 
 </menu>
