--- a/app/src/main/res/layout-land/recyclerview_item_course.xml
+++ b/app/src/main/res/layout-land/recyclerview_item_course.xml
@@ -18,9 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:paddingTop="@dimen/activity_margin_small"
             android:orientation="vertical"
-            android:paddingStart="@dimen/activity_horizontal_margin">
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_margin_small">
 
             <TextView
                 android:id="@+id/course_list_text_name"
@@ -29,37 +29,42 @@
                 android:textSize="@dimen/text_size_title"
                 tools:text="Course Name" />
 
-            <TextView
-                android:id="@+id/course_list_text_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/indent_size"
-                android:layout_marginTop="@dimen/text_line_spacing"
-                android:textSize="@dimen/text_size_standard"
-                tools:text="Course Status" />
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/indent_size"
-                android:layout_marginTop="@dimen/activity_margin_small"
+                android:layout_marginTop="@dimen/text_line_spacing"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/course_list_date_icon"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="@dimen/text_line_spacing"
-                    android:src="@drawable/ic_menu_calendar" />
+                    android:layout_marginStart="@dimen/indent_size"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/course_list_date_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/text_line_spacing"
+                        android:src="@drawable/ic_menu_calendar" />
+
+                    <TextView
+                        android:id="@+id/course_list_text_dates"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size_standard"
+                        tools:text="start date - end date" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/course_list_text_dates"
+                    android:id="@+id/course_list_text_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/indent_size"
                     android:textSize="@dimen/text_size_standard"
-                    tools:text="start date - end date" />
+                    tools:text="Course Status" />
             </LinearLayout>
         </LinearLayout>
 
